# SonicTag

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  debug_path.py  debug_pitch_est.py  debug_robustness.py  debug_speed.py  debug_tests.py  demo_realtime.py  pyproject.toml  repro_gsm.py
.github/workflows/: ci.yml
scripts/: acoustic_loopback.py
sonic_fastapi_app/backend/: requirements.txt
src/sonictag/: __init__.py  data.py  deepseal.py  fec.py  logger.py  ofdm.py  realtime.py  steganography.py  sync.py  transceiver.py
stego_web_app/: docker-compose.override.yml  docker-compose.yml
stego_web_app/backend/: Dockerfile  requirements.txt
stego_web_app/backend/config/: celery.py  settings.py  urls.py
stego_web_app/backend/stego_core/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
stego_web_app/backend/stego_core/migrations/: 0001_initial.py
stego_web_app/frontend/: Dockerfile  index.html  package-lock.json  package.json  server.js  vite.config.js
stego_web_app/frontend/src/: App.jsx  index.css
tests/: test_data.py  test_deepseal.py  test_integration.py  test_ofdm.py  test_robustness.py  test_sync.py  test_transceiver.py
web_app/backend/: main.py  requirements.txt
web_app/frontend/src/: index.css
